Compilation_Racket_Mips/piton/tests/errors/arg_type.py
def a(b: int): print_int(b)
a("ABC")